# asmp_mentor

./: docker-compose.yaml
ASMP23/: Dockerfile  pyproject.toml  wsgi-entrypoint.sh
ASMP23/LastYearData/: mentorData.csv
ASMP23/asmp_mentor/: settings.py  urls.py
ASMP23/asmp_reg/: admin.py  apps.py  models.py  options.py  urls.py  views.py
ASMP23/templates/AsmpReg/: form.html  home.html  index.html  thank.html
asmp_mentor/: pyproject.toml
asmp_mentor/asmp_mentor/: db.sqlite3  manage.py
asmp_mentor/asmp_mentor/asmp_mentor/: asgi.py  settings.py  wsgi.py
asmp_mentor/asmp_mentor/asmp_reg/: admin.py  models.py  options.py  resources.py  urls.py  views.py
asmp_mentor/asmp_mentor/asmp_reg/migrations/: 0001_initial.py  0002_remove_registration_alumni_recommendations_and_more.py  0003_registration_buddy.py  0004_registration_preferences.py  0005_alter_registration_pref.py  0006_alter_registration_fullname.py  0007_alter_registration_department.py  0008_remove_registration_suggestions.py  0009_alter_registration_dept_mentees.py  0010_preference_remove_registration_preferences_and_more.py  0011_remove_registration_preferences_and_more.py  0012_registration_field_other.py  0013_alter_registration_dept_mentees.py  0014_department_remove_registration_dept_mentees_and_more.py  0015_remove_registration_dept_mentees_delete_department_and_more.py  0016_alter_registration_hostel_alter_registration_pref.py
asmp_mentor/asmp_mentor/templates/AsmpReg/: form.html  home.html  index.html  thank.html
