[tool.poetry]
name = "BeastASMP"
version = "0.1.0"
description = "this is Asmp 2023"
authors = ["akash-banger <akashbanger2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"
cors = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
